--- a/INDEX.HTml
+++ b/INDEX.HTml
@@ -13,12 +13,11 @@
 
     <div class="container">
         <img src="picture/logo.png" alt="Logo của bạn" class="logo">
-       
-
         <h2>Đăng Nhập</h2>
         <label for="acount">Tài khoản: <input type="text" id="acount" placeholder="Tài khoản" /></label>
         <label for="password">Mật khẩu: <input type="password" id="password" placeholder="Mật khẩu" /></label>
-        <button onclick="login()">Đăng nhập</button>
+        <button onclick="login()">Đăng nhập</button> <br> <br>
+        <button onclick="register()">Đăng KÝ</button>
     </div>
 
     <script src="main.js"> </script>
