--- a/Register.html
+++ b/Register.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Form Đăng ký</title>
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <br><title>Form Đăng ký</title>
+    <link rel="stylesheet" type="text/css" href="index.css">
 </head>
 <body>
     <h1>Đăng ký tài khoản</h1>
