--- a/Register.html
+++ b/Register.html
@@ -5,7 +5,8 @@
     <link rel="stylesheet" type="text/css" href="index.css">
 </head>
 <body>
-    <h1>  Đăng ký tài khoản</h1>
+    <h1> Đăng ký tài khoản</h1>
+    <img src="picture/logo.png" alt="Logo của bạn" class="logo">
     <form id="registrationForm">
         <label for="username">Tên người dùng:</label>
         <input type="text" id="username" name="username" required>
