--- a/INDEX.HTml
+++ b/INDEX.HTml
@@ -14,10 +14,10 @@
 <h1>Đăng Nhập</h1>
     <div class="container">
         <img src="picture/logo.png" alt="Logo của bạn" class="logo">
-        <
+        
         <label for="acount">Tài khoản: <input type="text" id="acount" placeholder="Tài khoản" /></label>
         <label for="password">Mật khẩu: <input type="password" id="password" placeholder="Mật khẩu" /></label>
-        <button onclick="login()">Đăng nhập</button> <br> <br>
+        <button onclick="login()">Đăng nhập</button> <br> <br> <br> <br> <br> <br> <br> <br> <br><br><br><br>
         <button onclick="register()">Đăng KÝ</button>
     </div>
 
