--- a/Register.html
+++ b/Register.html
@@ -3,6 +3,7 @@
 <head>
     <br><title>Form Đăng ký</title>
     <link rel="stylesheet" type="text/css" href="index.css">
+    <link rel="stylesheet" type="text/css" href="index.css">
 </head>
 <body>
     <h1> Đăng ký tài khoản</h1>
@@ -19,9 +20,11 @@
         <label for="password">Mật khẩu:</label>
         <input type="password" id="password" name="password" required>
         <br>
-        <button type="button" onclick="registerascess()">Đăng ký</button>
-    </form>
+        <button type="button" onclick="registerascess()">Đăng ký</button><br><br><br><br><br><br><br>
+        <button type="button " onclick="Loginascess()">Quay lại đăng nhập</button>
 
+    </form>
+    
     <script src ="main.js"></script>
 </body>
 </html>
